[gd_scene load_steps=4 format=3 uid="uid://diff_window_scene"]

[ext_resource type="Script" path="res://addons/godot_minds/scripts/diff_window.gd" id="1_script"]
[ext_resource type="Texture2D" path="res://addons/godot_minds/icons/lucide/check.svg" id="2_check"]
[ext_resource type="Texture2D" path="res://addons/godot_minds/icons/lucide/x.svg" id="3_x"]

[node name="DiffWindow" type="Window"]
title = "Diff Viewer"
initial_position = 2
size = Vector2i(1000, 700)
min_size = Vector2i(800, 600)
exclusive = true
script = ExtResource("1_script")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Toolbar" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="FilePathLabel" type="Label" parent="MarginContainer/VBoxContainer/Toolbar"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "File: "
clip_text = true

[node name="LoadingIndicator" type="Label" parent="MarginContainer/VBoxContainer/Toolbar"]
unique_name_in_owner = true
layout_mode = 2
text = "Loading..."
horizontal_alignment = 2
visible = false

[node name="ContentSplit" type="HSplitContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
split_offset = 0

[node name="OriginalPanel" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ContentSplit"]
layout_mode = 2
size_flags_horizontal = 3

[node name="OriginalHeader" type="Label" parent="MarginContainer/VBoxContainer/ContentSplit/OriginalPanel"]
layout_mode = 2
text = "Original (HEAD)"
horizontal_alignment = 1

[node name="OriginalCodeEdit" type="CodeEdit" parent="MarginContainer/VBoxContainer/ContentSplit/OriginalPanel"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
editable = false
gutters_draw_line_numbers = true
gutters_zero_pad_line_numbers = true

[node name="NewPanel" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ContentSplit"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NewHeader" type="Label" parent="MarginContainer/VBoxContainer/ContentSplit/NewPanel"]
layout_mode = 2
text = "Modified"
horizontal_alignment = 1

[node name="NewCodeEdit" type="CodeEdit" parent="MarginContainer/VBoxContainer/ContentSplit/NewPanel"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
gutters_draw_line_numbers = true
gutters_zero_pad_line_numbers = true

[node name="ButtonBar" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer/ButtonBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RejectButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonBar"]
unique_name_in_owner = true
layout_mode = 2
text = "Reject"
icon = ExtResource("3_x")

[node name="AcceptButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonBar"]
unique_name_in_owner = true
layout_mode = 2
text = "Accept"
icon = ExtResource("2_check")
